--- a/Fuel Management/Fuel Management.csproj
+++ b/Fuel Management/Fuel Management.csproj
@@ -127,6 +127,7 @@
     <Content Include="images\bannerp.jpg" />
     <Content Include="images\bg-01.jpg" />
     <Content Include="images\bg_1.jpg" />
+    <Content Include="images\calender.png" />
     <Content Include="images\Digi.png" />
     <Content Include="images\icons\favicon.ico" />
     <Content Include="images\img_1.jpg" />
