--- a/Fuel Management/Fuel Management.csproj
+++ b/Fuel Management/Fuel Management.csproj
@@ -41,6 +41,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web.DataVisualization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -170,7 +171,7 @@
     <Content Include="js\scripts.js" />
     <Content Include="js\skycons.js" />
     <Content Include="LoginPage.aspx" />
-    <Content Include="ReportMonth.aspx" />
+    <Content Include="ReportChart.aspx" />
     <Content Include="vendor\animate\animate.css" />
     <Content Include="vendor\animsition\css\animsition.css" />
     <Content Include="vendor\animsition\css\animsition.min.css" />
@@ -229,12 +230,12 @@
       <DependentUpon>LoginPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportMonth.aspx.cs">
-      <DependentUpon>ReportMonth.aspx</DependentUpon>
+    <Compile Include="ReportChart.aspx.cs">
+      <DependentUpon>ReportChart.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="ReportMonth.aspx.designer.cs">
-      <DependentUpon>ReportMonth.aspx</DependentUpon>
+    <Compile Include="ReportChart.aspx.designer.cs">
+      <DependentUpon>ReportChart.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
